# frontend/openapi/openapi.json
@@ -1033,6 +1033,9 @@
             "format" : "uuid",
             "type" : "string"
           },
+          "reference" : {
+            "type" : [ "string", "null" ]
+          },
           "startDate" : {
             "format" : "date",
             "type" : "string"
@@ -1060,7 +1063,7 @@
             "type" : "string"
           },
           "method" : {
-            "enum" : [ "NEQUI", "TRANSFER", "CASH" ],
+            "enum" : [ "NEQUI", "TRANSFER", "CASH", "OTHER" ],
             "type" : "string"
           },
           "paidOn" : {
@@ -1070,6 +1073,9 @@
           "recordedBy" : {
             "format" : "uuid",
             "type" : "string"
+          },
+          "reference" : {
+            "type" : [ "string", "null" ]
           },
           "studentId" : {
             "format" : "uuid",
@@ -1189,7 +1195,7 @@
             "type" : "integer"
           },
           "method" : {
-            "enum" : [ "NEQUI", "TRANSFER", "CASH" ],
+            "enum" : [ "NEQUI", "TRANSFER", "CASH", "OTHER" ],
             "type" : "string"
           },
           "overrideModality" : {
@@ -1204,6 +1210,11 @@
           },
           "planId" : {
             "format" : "uuid",
+            "type" : "string"
+          },
+          "reference" : {
+            "maxLength" : 300,
+            "minLength" : 0,
             "type" : "string"
           }
         },
